Footnotes word-wrap fixed

--- a/code/project/footnotes/footnotes.scss
+++ b/code/project/footnotes/footnotes.scss
@@ -6,6 +6,7 @@
 
   h3 {
     display: flex;
+    flex-direction: column;
     @include word-wrap;
   }
 
